--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "antd": "^3.18.2",
     "axios": "^0.18.0",
+    "query-string": "^6.5.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-number-format": "^4.0.8",
     "react-number-format-clari": "^1.1.2-alpha.5",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
-    "reactstrap": "^6.5.0"
+    "react-scripts": "^3.0.1",
+    "reactstrap": "^6.5.0",
+    "sweetalert2": "^7.33.1"
   },
   "scripts": {
     "start": "react-scripts start",
