--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "antd": "^3.18.2",
+    "array-unique": "^0.3.2",
     "axios": "^0.18.0",
     "query-string": "^6.5.0",
     "react": "^16.8.6",
