--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "query-string": "^6.5.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-export-excel": "^0.5.3",
     "react-number-format": "^4.0.8",
     "react-number-format-clari": "^1.1.2-alpha.5",
     "react-router": "^4.3.1",
